Removed unnecessary statement to avoid ugly overflowed breaking of publish date and version info in minimal display resolutions

--- a/modules/uadetector-resources/src/site/resources/css/site.css
+++ b/modules/uadetector-resources/src/site/resources/css/site.css
@@ -8,7 +8,6 @@ h2 {
 }
 
 ul.breadcrumb {
-	white-space: nowrap;
 	overflow: hidden;
 }
 
